# USFM

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
USDSgen/data/: __init__.py  datasets.py  make_dataloader.py  transforms.py
USDSgen/models/: build.py
USDSgen/modules/backbone/: segbackbone.py
USDSgen/modules/losses/: atm_loss.py
USDSgen/trainer/: __init__.py  basetrainer.py  cls_trainer.py  seg_trainer.py
USDSgen/utils/: file_manager.py  hooks.py  logger.py  lr_scheduler.py  metrics.py  modelutils.py
configs/: eval.yaml  train.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: tn3k.yaml  tnscui.yaml
configs/data/Cls/: Fetal_Planes.yaml  template.yaml
configs/experiment/: baseconfig.yaml  ftSeg.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml  tagnamed.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: beitSeg.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
tools/: extractor.py
usdsgen/data/: make_dataloader.py
usdsgen/trainer/: basetrainer.py  cls_trainer.py
usdsgen/utils/: file_manager.py  modelutils.py  optimizer.py
usfm/: eval.py  train.py
usfm/data/: DS_Segdatamodule.py  transforms.py
usfm/models/: beitSegLit.py
usfm/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
(+13 files in other folders)
